# rabbi

./: Cargo.toml  README.md
public/: creds.json  index.html
src/: error.rs  log.rs  main.rs
src/ctx/: mod.rs
src/model/: mod.rs
src/web/: auth.rs  login.rs  mod.rs  tickets.rs
tests/: quick_dev.rs
