[package]
name = "rabbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.23", features = ["full"] }
# serde json
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
# Axum
axum = "0.7.3"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
# Others
lazy-regex = "3.1.0"
async-trait = "0.1.77"

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.8"
